<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Aplicação -->
	
    <string name="app_name">Calculadora</string>
    <string name="app_config">Configurações</string>

    <!-- Labels -->    
    <string name="numero1">1</string>
    <string name="numero2">2</string>
    <string name="numero3">3</string>
    <string name="numero4">4</string>
    <string name="numero5">5</string>
    <string name="numero6">6</string>
    <string name="numero7">7</string>
    <string name="numero8">8</string>
    <string name="numero9">9</string>
    <string name="numero0">0</string>
    
    <string name="funcaoSomar">+</string>
    <string name="funcaoSubtrair">-</string>
    <string name="funcaoMultiplicar">*</string>
    <string name="funcaoDividir">/</string>
    <string name="funcaoVirgula">,</string>
    <string name="funcaoIgual">=</string>
    <string name="funcaoRaiz">√</string>
    <string name="funcaoElevar">^</string>    
    
    <string name="funcaoParenteses">(    )</string>
    
    <string name="controleApagar">Limpar</string>
    <string name="controleCopiar">M+</string>
    <string name="controleColar">M-</string>
    
    <string name="DigiteValor">Digite o valor:</string>
    
    <!-- Mensagens -->
    
</resources>
