<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="calculadora.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/editTextResultado"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="9dp"
        android:background="#CCCCFF"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextResultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:columnCount="5"
        android:rowCount="4" >

        <Button
            android:id="@+id/buttonParenteseEsquerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funcaoParenteses" />

        <Button
            android:id="@+id/buttonControleCopiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controleCopiar" />

        <Button
            android:id="@+id/buttonControleColar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controleColar" />

        <Button
            android:id="@+id/buttonControleApagar"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/controleApagar" />

        <Button
            android:id="@+id/buttonNumero7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero7" />

        <Button
            android:id="@+id/buttonNumero8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero8" />

        <Button
            android:id="@+id/buttonNumero9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero9" />

        <Button
            android:id="@+id/buttonFuncaoElevar"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/funcaoElevar" />

        <Button
            android:id="@+id/buttonFuncaoRaiz"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/funcaoRaiz" />

        <Button
            android:id="@+id/buttonNumero4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero4" />

        <Button
            android:id="@+id/buttonNumero5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero5" />

        <Button
            android:id="@+id/buttonNumero6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero6" />

        <Button
            android:id="@+id/buttonFuncaoDividir"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/funcaoDividir" />

        <Button
            android:id="@+id/buttonFuncaoMultiplicar"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/funcaoMultiplicar" />

        <Button
            android:id="@+id/buttonNumero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero1" />

        <Button
            android:id="@+id/buttonNumero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero2" />

        <Button
            android:id="@+id/buttonNumero3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero3" />

        <Button
            android:id="@+id/buttonFuncaoSubtrair"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/funcaoSubtrair" />

        <Button
            android:id="@+id/buttonFuncaoSomar"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="@string/funcaoSomar" />

        <Button
            android:id="@+id/buttonNumero0"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/numero0" />

        <Button
            android:id="@+id/buttonFuncaoVirgula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funcaoVirgula" />

        <Button
            android:id="@+id/buttonFuncaoIgual"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/funcaoIgual" />
    </GridLayout>

</RelativeLayout>